# salman

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
config/: nats.env  salman.env
docker/: Dockerfile
docker/config/: neo4j.conf  salman.env
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/.devcontainer/: devcontainer.json
frontend/components/: AudioRecorder.tsx  AudioRecorderContext.tsx  NATSContext.tsx
frontend/docker/: Dockerfile  Dockerfile.production
frontend/pages/: index.tsx
nats/: Dockerfile  ws.conf
salman/: .dockerignore  .gitignore  Dockerfile  README.md  config.py  neo4j.py  pyproject.toml  voice.py
salman/app/: chat.py  salman.css  salman.py
salman/cli/: salman.py
salman/documents/: watcher.py
salman/graph/: triples.py
salman/llm/: agents.py  anthropic.py  bot.py  embeddings.py  llama.py  prompts.py
salman/logging/: logging.yaml
salman/salman/: config.py  nats.py  neo4j.py  voice.py
salman/salman/app/: app.py  chat.py  debug.py  prompt.py  salman.css  salman.py
salman/salman/chatbot/: bot.py
salman/salman/cli/: prompt.py  salman.py  workers.py
salman/salman/graph/: triples.py  triplets.py
salman/salman/llm/: __init__.py  agent.py  agents.py  anthropic.py  chain.py  graph.py  prompts.py
salman/salman/llm/graph/: __init__.py  graph_qa.py  memory.py  prompts.py
salman/salman/logging/: __init__.py  logging.yaml
salman/salman/nats/: workers.py
salman/salman/voice/: detection.py  recorder.py  transcription.py  utils.py
salman/salman/workers/: voice.py
salman/tests/: conftest.py  llm.py  test_graph.py  test_pubsub.py  test_voice_detection.py  test_voice_transcription.py  test_voice_workers.py
salman/tests/graph/: test_triples.py
salman/tests/voice/: test_voice_detection.py
tests/: conftest.py  test_watcher.py
tests/graph/: test_triples.py
