[tool.poetry]
name = "salman"
version = "0.1.0"
description = ""
authors = ["Yiorgis Gozadinos <ggozadinos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
anthropic = "^0.2.6"
google-search-results = "^2.4.2"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
pyaudio = "^0.2.13"
textual = {version = "^0.23.0", extras = ["dev"]}
neo4j = "^5.8.0"
pydantic = "^1.10.7"
googlesearch-python = "^1.2.3"
trafilatura = "^1.6.0"
pyyaml = "^6.0"
sentence-transformers = "2.2.1"
typer = "^0.9.0"
llama-cpp-python = "^0.1.57"
watchfiles = "^0.19.0"
langchain = "^0.0.193"
unstructured = {version = "^0.7.2", extras = ["local-inference"]}

[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
ruff = "^0.0.261"
black = "^23.3.0"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.scripts]
salman = "salman.cli.salman:app"
doc-watch = "salman.cli.salman:watcher"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-rP --disable-warnings"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88

[tool.ruff]

line-length = 88

# Enable Flake's "E" and "F" codes by default and "I" for sorting imports.
select = ["E", "F", "I"]
ignore = ["E501", "E741"] # E741 should not be ignored

# Exclude a variety of commonly ignored directories.
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    ".cache",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {"__init__.py"=["F401","F403"]}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9.
target-version = "py39"
